--- a/src/pages/what_love_picnic.adoc
+++ b/src/pages/what_love_picnic.adoc
@@ -45,8 +45,7 @@ With more than 25 nationalities, we are a very diverse bunch. This mix
 of backgrounds means we are a very open-minded team, happy to help
 anyone with (almost) anything, but also a friendly group of colleagues
 who like to hang out outside of work, as much as working with one
-another. We're a group of friends who like to hang out outside of work,
-as much as working with one another.
+another.
 
 👩🏾‍🏫👨🏼‍🏫 *Develop yourself and your career:*
 
