Fix typo on onboarding section

--- a/src/pages/onboarding.adoc
+++ b/src/pages/onboarding.adoc
@@ -20,7 +20,7 @@ image::checklist.png[Checklist]
 So you're done moving (or were already here 😉), and you're ready for
 your first day. Curious what to expect? Have a look:
 
-* *Monday*: On day your first day, you'll receive a warm welcome, a
+* *Monday*: On your first day, you'll receive a warm welcome, a
 Picnic introduction, your gear and set-up the office systems. In the
 afternoon, you'll spend 2-3 hours with the Customer Success team and
 meet your buddy (see below).
