--- a/src/links.adoc
+++ b/src/links.adoc
@@ -1,1 +1,1 @@
-:url-picnic-hq-gmaps: https://goo.gl/maps/L9NHVCgeX5Cwjv7h9[Picnic HQ]
+:url-picnic-hq-gmaps: https://www.google.com/maps/search/Picnic+HQ/@52.3314517,4.9166934,17z[Picnic HQ]
