--- a/src/pages/hiring_process.adoc
+++ b/src/pages/hiring_process.adoc
@@ -5,7 +5,7 @@ so that everyone involved is 100% sure of the decisions they're taking.
 For you, the candidate, this means an extensive look into how we work
 and what we work with while remaining quick so that no one wastes any
 time. For us, Picnic, it means an in-depth understanding of who you are,
-and how you fit might into our team, so that once you're here, you'll be
+and how you might fit into our team, so that once you're here, you'll be
 at your happiest and most productive. If you're curious to know how we
 make all this work, read on!
 
